--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,8 @@
       },
     "page_action": {
         "default_popup": "popup.html"
-      }
+      },
+    "icons": {
+      "128": "icon.png"
+    }
   }
